# python-slideshow

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
python-slideshow/: AlbumReader.py  Config.py  FFMPEGObject.py  VideoFFMPEG.py  utils.py
slideshow/: AlbumReader.py  Config.py  FFMPEGObject.py  GUIPyQt6.py  GUIPyQt6FFMPEG.py  Sorter.py  StreamFFMPEG.py  Subtitle.py  VideoFFMPEG.py  slideshow.py  utils.py
slideshow/config_processors/: __init__.py
