[build-system]
requires = ["setuptools"]

[project]
name = "python-slideshow"
authors = [
    {name = "Luc", email = "lucifiel1618@gmail.com"},
]
description = "Python Slideshow"
readme = "README.md"
requires-python = ">=3.11"
version = "2.0.0"

dependencies = [
    "pillow",
    "ffmpeg-python",
    "PyYAML"
]

[project.optional-dependencies]
gui = ["pyqt6", "python-vlc"]

[project.scripts]
slideshow = "slideshow.slideshow:main"
