[build-system]
requires = ["setuptools"]

[project]
name = "python-slideshow"
authors = [
    {name = "Luc", email = "lucifiel1618@gmail.com"},
]
description = "Python Slideshow"
readme = "README.md"
requires-python = ">=3.11"
version = "2.3.0"

dependencies = [
    "pillow",
    "ffmpeg-python",
    "PyYAML",
    "coloredlogs",
    "humanfriendly"
]

[project.optional-dependencies]
gui = ["pyqt6", "python-vlc"]
server = ["fastapi", "uvicorn"]

[project.scripts]
slideshow = "slideshow.slideshow:main"
